--- a/manual/ru/programmers_guide/Developer-Kit.html
+++ b/manual/ru/programmers_guide/Developer-Kit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Verge3D Developer Kit - Soft8Soft</title>
+    <title>Комплект Разработчика Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Learn how to use Developer Kit to create your own modification of Verge3D toolkit."/>
     <base href="../../../" />
@@ -17,23 +17,23 @@
   </head>
   <body><article>
 
-    <h1>Verge3D Developer Kit</h1>
+    <h1>Комплект Разработчика Verge3D</h1>
 
     <p>
-    Verge3D Developer Kit (DevKit) is a collection of examples, tools and source code which comes with <a href="https://www.soft8soft.com/product-category/enterprise-licenses/" target="_blank">Verge3D Enterprise</a> package. This collection will help you to perform various developer tasks such as:
+      Комплект разработчика Verge3D (DevKit) - это набор примеров, инструментов и исходного кода, которые поставляются с пакетом <a href="https://www.soft8soft.com/product-category/enterprise-licenses/" target="_blank">Verge3D Enterprise</a>. Этот набор поможет вам выполнять различные задачи разработчика, такие как:
     </p>
 
     <ul>
-      <li>Learn and review Verge3D toolkit internals.</li>
-      <li>Modify Verge3D and use modified versions in your own 3D apps.</li>
-      <li>Extend Verge3D API with your own classes and methods.</li>
-      <li>Add new Puzzles blocks.</li>
-      <li>Enhance Verge3D glTF exporter by adding your own data or parameters.</li>
-      <li>Develop your own product configurator or e-commerce system for WordPress by using the <em>Verge3D for WordPress</em> plugin as reference.</li>
+      <li>Изучение и обзор внутренних компонентов набора инструментов Verge3D.</li>
+      <li>Модификация Verge3D и использование модифицированных версий в собственных 3D-приложениях.</li>
+      <li>Расширение API Verge3D с помощью собственных классов и методов.</li>
+      <li>Разработка новых блоков Пазлов.</li>
+      <li>Совершенствование экспортера Verge3D glTF, добавляя свои собственные данные или параметры.</li>
+      <li>Разработка своего собственного конфигуратора или системы e-commerce для WordPress используя плагин <em>Verge3D for WordPress</em> в качестве референса.</li>
     </ul>
 
     <p class="note">
-    Developer Kit is intended for seasoned programmers who wish to modify the engine. You don't need it for creating Verge3D applications with the standard set of functionality.
+    Комплект разработчикаDeveloper предназначен для опытных программистов, желающих модифицировать движок. Он не нужен для создания приложений Verge3D со стандартным набором функций.
     </p>
 
     [contents]
@@ -41,18 +41,18 @@
 
     [anchor:Installation]
 
-    <h2>Installation and Configuration</h2>
+    <h2>Установка и Настройка</h2>
 
     <p>
-    Grab the DevKit archive from the download area of your <a href="https://www.soft8soft.com/my-account/" target="_blank">account dashboard</a>. Unpack this archive to a directory of your choice.
+      Возьмите архив DevKit из области загрузки <a href="https://www.soft8soft.com/my-account/" target="_blank">панели инструментов</a> вашей учетной записи. Распакуйте этот архив в выбранную вами директорию.
     </p>
 
     <p>
-    If you're going to build Verge3D engine or Puzzles from source code, you'll need the *npm* utility which is part of the *Node.js* runtime. You can install it by following <a href="https://nodejs.org/en/download/package-manager/" target="_blank">these instructions</a>.
+      Если вы собираетесь собрать движок Verge3D или Пазлы из исходного кода, вам понадобится утилита *npm*, которая является частью среды разработки *Node.js*. Вы можете установить ее с помощью <a href="https://nodejs.org/en/download/package-manager/" target="_blank">этих инструкций</a>.
     </p>
 
     <p>
-    Finally, go to the unpacked directory of DevKit and execute the following command to install the dependencies:
+      Наконец, перейдите в распакованный каталог DevKit и выполните следующую команду для установки зависимостей:
     </p>
 
     <code>npm install</code>
@@ -60,111 +60,111 @@
 
     [anchor:Structure]
 
-    <h2>DevKit Structure</h2>
+    <h2>Структура DevKit</h2>
 
     <p>
-    Freshly installed DevKit includes the following directories:
+    DevKit включает следующие каталоги:
     </p>
 
     <table style="width:100%">
       <tr>
-        <th>Directory</th>
-        <th>Description</th>
+        <th>Каталог</th>
+        <th>Описание</th>
       </tr>
       <tr>
         <td>addons/verge3d</td>
-        <td>Source code of Blender add-on (Verge3D for Blender only).</td>
+        <td>Исходный код дополнения для Blender (Verge3D только для Blender).</td>
       </tr>
       <tr>
         <td>build</td>
-        <td>Pre-built Verge3D engine scripts and additional modules (ammo.js, etc).</td>
+        <td>Готовые скрипты движка Verge3D и дополнительные модули (ammo.js и т.д.).</td>
       </tr>
       <tr>
         <td>max_plugin</td>
-        <td>Source code of 3ds Max plugin (Verge3D for 3ds Max only).</td>
+        <td>Исходный код плагина для 3ds Max (Verge3D только для 3ds Max).</td>
       </tr>
       <tr>
         <td>maya_plugin</td>
-        <td>Source code of Maya plugin (Verge3D for Maya only).</td>
+        <td>Исходный код плагина для Maya (только Verge3D для Maya).</td>
       </tr>
       <tr>
         <td>puzzles</td>
-        <td>Pre-built scripts and source code of the Puzzles editor.</td>
+        <td>Готовые скрипты и исходный код редактора Puzzles.</td>
       </tr>
       <tr>
         <td>python</td>
-        <td>Python 3 runtime and utility modules.</td>
+        <td>Python 3 и служебные модули.</td>
       </tr>
       <tr>
         <td>src</td>
-        <td>Verge3D engine source code.</td>
+        <td>Исходный код движка Verge3D.</td>
       </tr>
       <tr>
         <td>templates</td>
-        <td>Verge3D application templates.</td>
+        <td>Шаблоны приложений Verge3D.</td>
       </tr>
       <tr>
         <td>wordpress</td>
-        <td><em>Verge3D for WordPress</em> plugin source code.</td>
+        <td>Исходный код плагина <em>Verge3D for WordPress</em>.</td>
       </tr>
       <tr>
         <td>xz</td>
-        <td>Source code of the XZ compression module.</td>
+        <td>Исходный код модуля сжатия XZ.</td>
       </tr>
     </table>
 
 
     [anchor:Building_Verge3D]
 
-    <h2>Building Verge3D</h2>
+    <h2>Сборка Verge3D</h2>
 
-    <p>Before compiling Verge3D, please make sure you installed *npm* and all required dependencies as described above.</p>
+    <p>Перед компиляцией Verge3D, пожалуйста, убедитесь что вы установили *npm* и все необходимые зависимости, как описано выше.</p>
 
     <p>
-    To compile an <em>unoptimized</em> build of Verge3D, which suits well for testing and debugging purposes, execute the following command in the DevKit directory:
+    Чтобы скомпилировать <em>неоптимизированный</em> билд Verge3D, что хорошо подходит для целей тестирования и отладки, выполните следующую команду в директории DevKit:
     </p>
 
     <code>npm run build</code>
 
     <p>
-    You can find the compiled modules inside the *build* directory of your DevKit. To test it, simply copy *v3d.js* engine module to your application inside Verge3D installation, for example:
+      Вы можете найти скомпилированные модули в директории *build* вашего DevKit. Чтобы протестировать его, просто скопируйте модуль движка *v3d.js* в ваше приложение внутри Verge3D, например:
     </p>
 
     <code>cp build/v3d.js ~/verge3d/applications/my_awesome_application/</code>
 
     <p>
-    To compile an <em>optimized</em> of Verge3D (aka release version), execute the following command in the DevKit directory:
+      Чтобы скомпилировать <em>оптимизированную</em> версию Verge3D (она же релизная версия), выполните следующую команду в директории DevKit:
     </p>
 
     <code>npm run build-release</code>
 
     <p>
-    The following commands are used to build the Puzzles logic editor. To build an <em>unoptimized</em> version type:
+      Для сборки логического редактора Пазлов используются следующие команды. Для создания <em>неоптимизированной</em> версии введите:
     </p>
 
     <code>npm run build-puzzles</code>
 
-    <p>To build an <em>optimized</em> version, execute:</p>
+    <p>Чтобы собрать <em>оптимизированную</em> версию, выполните команду:</p>
 
     <code>npm run build-puzzles-release</code>
 
     <p>
-    You can find the compiled Puzzles editor script inside the *puzzles* directory of your DevKit. To apply it to Verge3D, copy the entire content of this directory to the *puzzles* directory inside your Verge3D installation (replacing files which already exist there).
+      Скомпилированный скрипт редактора Пазлов находится в директории *puzzles* вашего DevKit. Чтобы применить его в Verge3D, скопируйте все содержимое этого каталога в каталог *puzzles* в вашей директории Verge3D (заменяя уже существующие там файлы).
     </p>
 
 
     [anchor:Custom_API_Method]
 
-    <h2>Adding New Method to JavaScript API</h2>
+    <h2>Добавление Нового Метода в JavaScript API</h2>
 
     <p>
-    Say, you want to add another method to the *App* class. For example, a *printHelloWorld()* method should print something to the browser console:
+      Допустим, вы хотите добавить еще один метод в класс *App*. Например, метод *printHelloWorld()* должен вывести что-то на консоль браузера:
     </p>
 
     <code>App.printHelloWorld()</code>
 
     <p>
-    The *App* class is implemented in the module located at *src/extras/App.js*. Open it and add the following code to the end of the file, just before the closing brackets of the *App* class. Don't forget to add another comma where the previous method ends.
+      Класс *App* реализован в модуле, расположенном по адресу *src/extras/App.js*. Откройте его и добавьте следующий код в конец файла, прямо перед закрывающими скобками класса *App*. Не забудьте добавить еще одну запятую там, где заканчивается предыдущий метод.
     </p>
 
     <code>
@@ -174,23 +174,23 @@
     </code>
 
     <p>
-    <a href="manual/ru/programmers_guide/Developer-Kit.html#Building_Verge3D">Build</a> and copy the Puzzles runtime to your Verge3D installation folder. You can now try the newly added block in the Puzzles editor.
+    <a href="manual/ru/programmers_guide/Developer-Kit.html#Building_Verge3D">Соберите</a> и скопируйте среду выполнения Пазлов в папку с установленным Verge3D. Теперь вы можете попробовать новый добавленный блок в редакторе Пазлов.
     </p>
 
 
 
     [anchor:Custom_API_Class]
 
-    <h2>Adding New Class to JavaScript API</h2>
+    <h2>Добавление Нового Класса в JavaScript API</h2>
 
     <p>
-    To supplement the Verge3D API with some custom class, create a .js file named after your class in a relevant subdirectory of DevKit's *src* folder (e.g. src/extras/MyAwesomeClass.js). In this .js file, implement your class - you can get inspired by already existing classes. Finally, register your class in the global namespace *v3d* by adding the following line in *src/v3d.js* file:
+      Чтобы дополнить API Verge3D каким-либо пользовательским классом, создайте .js файл с именем вашего класса в соответствующем подкаталоге папки *src* DevKit (например, src/extras/MyAwesomeClass.js). В этом .js-файле реализуйте свой класс - вы можете вдохновиться уже существующими классами. Наконец, зарегистрируйте свой класс в глобальном пространстве имен *v3d*, добавив следующую строку в файл *src/v3d.js*:
     </p>
 
     <code>export { MyAwesomeClass } from './extras/MyAwesomeClass.js';</code>
 
     <p>
-    <a href="manual/ru/programmers_guide/Developer-Kit.html#Building_Verge3D">Build</a> and copy the Verge3D runtime to your application, and try it out in the browser console.
+    <a href="manual/ru/programmers_guide/Developer-Kit.html#Building_Verge3D">Соберите</a> и скопируйте среду выполнения Verge3D в ваше приложение и попробуйте ее в консоли браузера.
     </p>
 
     <code>
@@ -201,20 +201,20 @@
 
     [anchor:Puzzles_Block]
 
-    <h2>Adding New Puzzles</h2>
+    <h2>Добавление Новых Пазлов</h2>
 
     <p>
-    To create a custom Puzzles block, edit the *puzzles/src/puzzles_blocks.js* file. You can get inspired by already existing puzzles. Register it in a relevant toolbox category in the top of the file.
+      Чтобы создать пользовательский блок Пазлов, отредактируйте файл *puzzles/src/puzzles_blocks.js*. Вы можете вдохновиться уже существующими пазлами. Зарегистрируйте его в соответствующей категории панели инструментов в верхней части файла.
     </p>
 
     <p>
-    <a href="manual/ru/programmers_guide/Developer-Kit.html#Building_Verge3D">Build</a> and copy the Puzzles runtime to your Verge3D installation folder. You should now find your new puzzle in the toolbox of the Puzzles editor.
+    <a href="manual/ru/programmers_guide/Developer-Kit.html#Building_Verge3D">Соберите</a> и скопируйте среду выполнения Пазлов в папку с установленным Verge3D. Теперь вы должны найти свой новый пазл в панели инструментов Редактора Пазлов.
     </p>
 
 
-    <h2>Got Questions?</h2>
+    <h2>Остались вопросы?</h2>
 
-    <p>Feel free to ask on the <a href="https://www.soft8soft.com/forums/" target="_blank">forums</a>!</p>
+    <p>Задайте их на нашем <a href="https://www.soft8soft.com/forums/" target="_blank">форуме</a>!</p>
 
   </article></body>
 </html>
