--- a/manual/ru/programmers_guide/Drawing-lines.html
+++ b/manual/ru/programmers_guide/Drawing-lines.html
@@ -7,14 +7,14 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Drawing Lines</h1>
+    <h1>Рисование Линий</h1>
     <div>
       <p>
-        Let's say you want to draw a line or a circle, not a wireframe [page:Mesh].
-        First we need to setup the [page:WebGLRenderer renderer], [page:Scene scene] and camera (see the Creating a scene page).
+        Допустим, вы хотите нарисовать линию или круг, а не меш [page:Mesh].
+        Сначала нам нужно настроить [page:WebGLRenderer renderer], [page:Scene scene] и камеру (см. страницу Создание сцены).
       </p>
 
-      <p>Here is the code that we will use:</p>
+      <p>Вот код, который мы будем использовать:</p>
       <code>
 var renderer = new v3d.WebGLRenderer();
 renderer.setSize(window.innerWidth, window.innerHeight);
@@ -26,15 +26,15 @@ camera.lookAt(0, 0, 0);
 
 var scene = new v3d.Scene();
       </code>
-      <p>Next thing we will do is define a material. For lines we have to use [page:LineBasicMaterial] or [page:LineDashedMaterial].</p>
+      <p>Следующее, что мы сделаем, это определим материал. Для линий мы должны использовать [page:LineBasicMaterial] или [page:LineDashedMaterial].</p>
       <code>
 //create a blue LineBasicMaterial
 var material = new v3d.LineBasicMaterial({ color: 0x0000ff });
       </code>
 
       <p>
-        After material we will need a [page:Geometry] or [page:BufferGeometry] with some vertices
-        (it's recommended to use a BufferGeometry as it's more performant, however for simplicity we'll use a Geometry here):
+        После материала нам понадобится [page:Geometry] или [page:BufferGeometry] с некоторыми вершинами
+        (рекомендуется использовать BufferGeometry, так как он более производителен, однако для простоты мы будем использовать Geometry):
       </p>
 
       <code>
@@ -44,20 +44,20 @@ geometry.vertices.push(new v3d.Vector3(0, 10, 0));
 geometry.vertices.push(new v3d.Vector3(10, 0, 0));
       </code>
 
-      <p>Note that lines are drawn between each consecutive pair of vertices, but not between the first and last (the line is not closed.)</p>
+      <p>Обратите внимание, что линии проводятся между каждой последовательной парой вершин, но не между первой и последней (линия не замкнута).</p>
 
-      <p>Now that we have points for two lines and a material, we can put them together to form a line.</p>
+      <p>Теперь, когда у нас есть точки для двух линий и материал, мы можем соединить их вместе, чтобы сформировать линию.</p>
       <code>
 var line = new v3d.Line(geometry, material);
       </code>
-      <p>All that's left is to add it to the scene and call [page:WebGLRenderer.render render].</p>
+      <p>Остается только добавить ее в сцену и вызвать [page:WebGLRenderer.render render].</p>
 
       <code>
 scene.add(line);
 renderer.render(scene, camera);
       </code>
 
-      <p>You should now be seeing an arrow pointing upwards, made from two blue lines.</p>
+      <p>Теперь вы должны увидеть стрелку, направленную вверх, составленную из двух синих линий.</p>
     </div>
   </article></body>
 </html>
