--- a/manual/ru/programmers_guide/How-to-obtain-Verge3D-sources.html
+++ b/manual/ru/programmers_guide/How-to-obtain-Verge3D-sources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>How to obtain Verge3D sources - Soft8Soft</title>
+    <title>Как получить исходники Verge3D - Soft8Soft</title>
     <meta charset="utf-8">
     <meta name="description" content="Find out how to obtain the complete source code of Verge3D."/>
     <base href="../../../" />
@@ -9,8 +9,8 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>How to Obtain Verge3D Sources</h1>
-    <p>The complete Verge3D source code is provided as part of Verge3D Developer Kit package. This package is available free of charge to all Verge3D Enterprise customers. See this <a href="manual/ru/programmers_guide/Developer-Kit.html">page</a> for instructions on how to obtain and install it.</p>
-    <p>If you experience difficulties with using any of the API methods, check out Verge3D [link:https://cdn.soft8soft.com/demo/examples/index.html example applications] or consult with the Verge3D developers and community on the Soft8Soft [link:https://www.soft8soft.com/forums/ forums].</p>
+    <h1>Как Получить Исходники Verge3D</h1>
+    <p>Полный исходный код Verge3D предоставляется в составе пакета Verge3D Developer Kit. Этот пакет доступен бесплатно для всех клиентов Verge3D Enterprise. Ознакомьтесь с данной <a href="manual/ru/programmers_guide/Developer-Kit.html">страницей</a>, содержащей инструкции о том, как получить и установить его.</p>
+    <p>Если у вас возникли трудности с использованием какого-либо из методов API, обратитесь к [ссылка:https://cdn.soft8soft.com/demo/examples/index.html примерам приложений] Verge3D или проконсультируйтесь с разработчиками и сообществом Verge3D на форумах Soft8Soft [ссылка:https://www.soft8soft.com/forums/].</p>
   </article></body>
 </html>
