--- a/manual/ru/programmers_guide/Integration-with-Reactjs-Vuejs.html
+++ b/manual/ru/programmers_guide/Integration-with-Reactjs-Vuejs.html
@@ -1,30 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>How to integrate a Verge3D app into a React.js/Vue.js project - Soft8Soft</title>
+    <title>Как интегрировать приложение Verge3D в проект React.js/Vue.js - Soft8Soft</title>
     <meta charset="utf-8">
     <base href="../../../" />
     <script src="page.js"></script>
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>Integration with React.js/Vue.js</h1>
+    <h1>Интеграция с React.js/Vue.js</h1>
 
     <p>
-        One of the easiest way of integrating a Verge3D scene into your project
-        is to load it separately through an iframe element. But if you want to
-        use it directly inside your app then there could appear some difficulties
-        along the way. However, there are plenty of possible project configurations
-        with their specific issues and peculiarities. This guide can't comprehend
-        them all and only targets such popular javascript frameworks as React.js
-        and Vue.js.
+        Один из самых простых способов интегрировать сцену Verge3D в ваш проект
+        это загрузить ее отдельно через элемент iframe. Но если вы хотите
+        использовать ее непосредственно в своем приложении, то могут возникнуть некоторые трудности. Существует множество возможных конфигураций проекта
+        со своими специфическими проблемами и особенностями. Данное руководство не может охватить
+        их все и ориентировано только на такие популярные javascript-фреймворки, как React.js
+        и Vue.js.
     </p>
 
     <p>
-        Verge3D provides an example of how to make a simple "Hello, world!"
-        React or Vue project and integrate a standard Verge3D application into
-        it. The example files are located in the *manager/templates/Embeddable*
-        directory inside the Verge3D distribution.
+        Verge3D предлагает пример того, как сделать простой 
+        проект "Hello, world!" на React или Vue и интегрировать в него стандартное приложение Verge3D. 
+        Файлы примеров находятся в *manager/templates/Embeddable*
+        внутри дистрибутива Verge3D.
     </p>
 
     [contents]
@@ -32,17 +31,17 @@
 
     [anchor:Verge3D_React]
 
-    <h2>Verge3D React.js Application Example</h2>
+    <h2>Пример Приложения Verge3D на React.js</h2>
 
     <p>
-        Here's a simple instruction on how to create a basic React.js + Verge3D
-        application with the Create React App utility. You can find a copy of
-        this instruction in *manager/templates/Embeddable/README.md* inside the
-        Verge3D distribution.
+        Вот простая инструкция о том, как создать базовое приложение React.js + Verge3D
+        с помощью утилиты Create React App. Вы можете найти копию
+        этой инструкции в *manager/templates/Embeddable/README.md* внутри
+        дистрибутива Verge3D.
     </p>
 
     <p>
-        1) Create a React.js application via the Create React App utility:
+        1) Создайте приложение React.js с помощью утилиты Create React App:
 
     <code>
     npx create-react-app react_v3d_app
@@ -50,25 +49,25 @@
     </p>
 
     <p>
-        2) Delete all files in the *react_v3d_app/src* directory.
+        2) Удалите все файлы в директории *react_v3d_app/src*.
     </p>
 
     <p>
-        3) Copy the content of the *manager/templates/Embeddable/public* Verge3D's
-        directory to *react_v3d_app/public*.
+        3) Скопируйте содержимое *manager/templates/Embeddable/public* из директории Verge3D
+        в *react_v3d_app/public*.
     </p>
 
     <p>
-        Copy the content of the *manager/templates/Embeddable/src* Verge3D's
-        directory to *react_v3d_app/src*.
+        Скопируйте содержимое *manager/templates/Embeddable/src* из директории Verge3D
+        в *react_v3d_app/src*.
     </p>
 
     <p>
-        Copy the engine file *build/v3d.js* to *react_v3d_app/public*.
+        Скопируйте файл движка *build/v3d.js* в *react_v3d_app/public*.
     </p>
 
     <p>
-        4) Add the following script tag into *react_v3d_app/public/index.html*:
+        4) Добавьте следующий тег скрипта в *react_v3d_app/public/index.html*.:
 
     <code>
     &lt;script src="%PUBLIC_URL%/v3d.js"&gt;&lt;/script&gt;
@@ -76,9 +75,9 @@
     </p>
 
     <p>
-        5) Create a *components* directory inside *react_v3d_app/src*. Then
-        create a file called *react_v3d_app/src/components/V3DApp.js* with the
-        following content:
+        5) Создайте каталог *components* внутри *react_v3d_app/src*. Затем
+        создайте файл *react_v3d_app/src/components/V3DApp.js* со
+        следующим содержанием:
 
     <!--
         NOTE: using language-js here to fix incorrect highlighting of class
@@ -119,7 +118,7 @@
     </p>
 
     <p>
-        6) Create a file *react_v3d_app/src/index.js* containing the following code:
+        6) Создайте файл *react_v3d_app/src/index.js*, содержащий следующий код:
 
     <code>
     import React from 'react';
@@ -135,31 +134,31 @@
     </p>
 
     <p>
-        7) Run the development server by executing the following command in the
-        *react_v3d_app* directory:
+        7) Запустите сервер разработки, выполнив следующую команду в директории
+        *react_v3d_app*:
 
     <code>
     npm start
     </code>
 
-        By default the application now should be available at
-        <a href="http://localhost:3000/" target="_blank">http://localhost:3000/</a>.
+    Теперь приложение должно быть доступно по адресу
+        <a href="http://localhost:3000/" target="_blank">http://localhost:3000/</a> по умолчанию.
     </p>
 
 
     [anchor:Verge3D_Vue]
 
-    <h2>Verge3D Vue.js Application Example</h2>
+    <h2>Пример Приложения Verge3D на Vue.js</h2>
 
     <p>
-        Here's a simple instruction on how to create a basic Vue.js + Verge3D
-        application with the Vue CLI utility. You can find a copy of this
-        instruction in *manager/templates/Embeddable/README.md* inside the
-        Verge3D distribution.
+        Вот простая инструкция о том, как создать базовое приложение Vue.js + Verge3D
+        с помощью утилиты Vue CLI. Вы можете найти копию этой
+        инструкцию в *manager/templates/Embeddable/README.md* внутри
+        дистрибутива Verge3D.
     </p>
 
     <p>
-        1) Create a Vue.js application via the Vue CLI utility:
+        1) Создайте приложение Vue.js с помощью утилиты Vue CLI:
 
     <code>
     npx @vue/cli create vue_v3d_app
@@ -167,21 +166,21 @@
     </p>
 
     <p>
-        2) Copy the content of the *manager/templates/Embeddable/public* Verge3D's
-        directory to *vue_v3d_app/public*.
+        2) Скопируйте содержимое *manager/templates/Embeddable/public* из директории Verge3D
+        в *vue_v3d_app/public*.
     </p>
 
     <p>
-        Copy the content of the *manager/templates/Embeddable/src* Verge3D's
-        directory to *vue_v3d_app/src*.
+        Скопируйте содержимое *manager/templates/Embeddable/src* из директории Verge3D
+        в *vue_v3d_app/src*.
     </p>
 
     <p>
-        Copy the engine file *build/v3d.js* to *vue_v3d_app/public*.
+        Скопируйте файл движка *build/v3d.js* в *vue_v3d_app/public*.
     </p>
 
     <p>
-        3) Add the following script tag into *vue_v3d_app/public/index.html*:
+        3) Добавьте следующий тег скрипта в *vue_v3d_app/public/index.html*:
 
     <code>
     &lt;script src="&lt;%= BASE_URL %&gt;v3d.js"&gt;&lt;/script&gt;
@@ -189,8 +188,8 @@
     </p>
 
     <p>
-        4) Create a file *vue_v3d_app/src/components/V3DApp.vue* containing the
-        following code:
+        4) Создайте файл *vue_v3d_app/src/components/V3DApp.vue*, содержащий
+        следующий код:
 
     <code>
     &lt;template&gt;
@@ -235,12 +234,12 @@
     </p>
 
     <p class="note">
-        The beforeDestroy() hook is deprecated in Vue.js 3.0.0+, use beforeUnmount() instead.</br>
-        See: <a href="https://eslint.vuejs.org/rules/no-deprecated-destroyed-lifecycle.html">https://eslint.vuejs.org/rules/no-deprecated-destroyed-lifecycle.html</a>
+        Функция beforeDestroy() устарела в Vue.js 3.0.0+, вместо нее используйте beforeUnmount().</br>
+        Подробнее: <a href="https://eslint.vuejs.org/rules/no-deprecated-destroyed-lifecycle.html">https://eslint.vuejs.org/rules/no-deprecated-destroyed-lifecycle.html</a>
     </p>
 
     <p>
-        5) Change *vue_v3d_app/src/App.vue* so it will look like this:
+        5) Измените *vue_v3d_app/src/App.vue* так, чтобы он выглядел следующим образом:
 
     <code>
     &lt;template&gt;
@@ -261,96 +260,86 @@
     </p>
 
     <p>
-        6) Run the development server by executing the following command in the
-        *vue_v3d_app* directory:
+        6) Запустите сервер разработки, выполнив следующую команду в каталоге
+        *vue_v3d_app*:
 
     <code>
     npm run serve
     </code>
 
-        By default the application now should be available at
-        <a href="http://localhost:8080/" target="_blank">http://localhost:8080/</a>.
+    Теперь приложение должно быть доступно по адресу
+        <a href="http://localhost:8080/" target="_blank">http://localhost:8080/</a> по умолчанию.
     </p>
 
 
     [anchor:using_the_puzzles_editor]
 
-    <h2>Using the Puzzles Editor</h2>
+    <h2>Использование Редактора Пазлов</h2>
 
     <p>
-        There's no direct integration between React/Vue and the
-        <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html">Puzzles Editor</a>/
-        <a href="manual/ru/introduction/App-Manager.html">Application Manager</a>.
-        Nevertheless, you can still use Puzzles for adding behavior scenarios to your
-        React/Vue applications. This section explains how to do that and what are
-        the limitations of the chosen approach.
+        Нет прямой интеграции между React/Vue и
+        <a href="manual/ru/introduction/Puzzles-Visual-Logic-Editor.html">Редактором Пазлов</a>/
+        <a href="manual/ru/introduction/App-Manager.html">Менеджером приложения</a>.
+        Тем не менее, вы по-прежнему можете использовать пазлы для добавления сценариев поведения в ваши
+        React/Vue-приложения. В этом разделе объясняется, как это сделать и каковы
+        ограничения данного подхода.
     </p>
 
     <p>
-        The Application Manager doesn't know what directory structure of a
-        typical React/Vue project can look like. However, after some tweaking
-        the manager can at least recognize the project's blend-files, the exported
-        .gltf/.glb/.bin scene files and the Puzzles' visual logic scripts. That
-        means you can view the corresponding scene resources and launch the
-        Puzzles Editor from within the
-        <a href="manual/ru/introduction/App-Manager.html#Exploring_Applications">App Manager's web-page</a>.
+        Менеджер приложений не знает, как может выглядеть структура каталогов типичного проекта React/Vue. Однако после некоторой настройки менеджер может, по крайней мере, распознать blend-файлы проекта, экспортированные .gltf/.glb/.bin файлы сцен и скрипты визуальной логики пазлов.
+        Это означает, что вы можете просматривать соответствующие ресурсы сцены и запускать
+        редактор пазлов из
+        <a href="manual/ru/introduction/App-Manager.html#Exploring_Applications">веб-страницы Менеджера приложений</a>.
         <br/><br/>
 
-        The drawback here is that viewing the .gltf files and working with Puzzles
-        can be only done via the Verge3D Player, i.e the same way as for all
-        standard Verge3D applications <a href="manual/ru/introduction/App-Manager.html#Creating_Applications">
-        created within the App Manager</a>. So, there's no access to React/Vue
-        features, components, logic, etc... and Puzzles can be added only in a
-        separate manner. Still, a complete React/Vue application can load, run
-        and communicate with the logic script created in the Puzzles Editor.
+        Недостатком здесь является то, что просмотр файлов .gltf и работа с пазлами
+        может осуществляться только через Verge3D Player, т.е. так же, как и для всех
+        стандартных приложений Verge3D <a href="manual/ru/introduction/App-Manager.html#Creating_Applications">
+        созданных внутри Менеджера приложений</a>. Таким образом, нет доступа к React/Vue 
+        функциям, компонентам, логике и т.д... и пазлы могут быть добавлены только отдельным образом. Тем не менее, полноценное приложение React/Vue может загружаться, запускаться 
+        и взаимодействовать с логическим сценарием, созданным в редакторе пазлов.
     </p>
 
-    <h3>App Manager Setup</h3>
+    <h3>Настройка Менеджера Приложений</h3>
 
     <p>
-        Suppose we have a React or a Vue application created according to the
-        guide described in this manual. Let's say that it's located at the path
-        *APP_PATH* and your Verge3D distribution is located at the path
+        Предположим, у нас есть приложение React или Vue, созданное в соответствии с
+        руководством, описанным в этом справочнике. Предположим, что оно расположено в пути
+        *APP_PATH*, а ваш дистрибутив Verge3D расположен в пути
         *VERGE3D_PATH*.
         <br/><br/>
 
-        In order to "connect" the App Manager and the React/Vue project we need
-        to create a dedicated directory inside *VERGE3D_PATH/applications* (the
-        place where all Verge3D applications are usually found). We'll create it
-        as a symbolic link pointing to *APP_PATH/public/v3dApp* - this is the
-        place inside our React/Vue project where the verge3d-related scene
-        resources and Puzzles' logic files are located. Let's call the new
-        directory *my_app*. Here's how it can be done:
+        Для того чтобы "соединить" App Manager и проект React/Vue, нам необходимо создать специальный каталог внутри *VERGE3D_PATH/applications* (место, где обычно находятся все приложения Verge3D). Мы создадим его как символическую ссылку, указывающую на *APP_PATH/public/v3dApp* - это и есть место внутри нашего проекта React/Vue, где находятся связанные с verge3d сценой ресурсы и логические файлы пазла. Давайте назовем новую директорию *my_app*. Вот как это можно сделать:
     </p>
 
-    <b><u>on Linux</u></b>
+    <b><u>на Linux</u></b>
     <code>
     ln -sr APP_PATH/public/v3dApp VERGE3D_PATH/applications/my_app
     </code>
 
-    <b><u>on Windows (PowerShell, requires administrator rights)</u></b>
+    <b><u>на Windows (PowerShell, требуются права администратора)</u></b>
     <code>
     cmd /c mklink /D VERGE3D_PATH\applications\my_app (Resolve-Path APP_PATH\public\v3dApp)
     </code>
 
     <p>
-        After that, it remains only to open the file *APP_PATH/src/v3dApp/app.js*,
-        then find the following line:
+        После этого остается только открыть файл *APP_PATH/src/v3dApp/app.js*,
+        затем найти следующую строку:
     </p>
 
     <code>
     var LOAD_LOGIC_FILES = false;
     </code>
 
-    <p>and change it as follows to enable loading the Puzzles' logic script:</p>
+    <p>и измените ее следующим образом, чтобы включить загрузку логического скрипта пазла:</p>
 
     <code>
     var LOAD_LOGIC_FILES = true;
     </code>
 
     <p>
-    Now you can see your project in the Application Manager. You can open its
-    .gltf and .blend files and use the Puzzles Editor.
+        Теперь вы можете увидеть свой проект в диспетчере приложений. Вы можете открыть его
+        .gltf и .blend файлы и использовать редактор пазлов.
     </p>
 
     <img src="files/integration-with-reactjs-vuejs/app-manager.jpg" class="centered" style="max-width: 800px">
