--- a/manual/ru/programmers_guide/Programming-basics.html
+++ b/manual/ru/programmers_guide/Programming-basics.html
@@ -10,7 +10,7 @@
   <body><article>
     <h1>Основы программирования</h1>
 
-    <p>Цель этого раздела - дать краткое введение в Verge3D. Мы начнем с создания сцены с вращающимся кубом. Внизу страницы приведен рабочий пример на случай, если вы затруднитесь и вам понадобится помощь.</p>
+    <p>Цель этого раздела - краткое введение в Verge3D. Мы начнем с создания сцены с вращающимся кубом. Внизу страницы вы найдете готовый код приложения на случай, если у возникнут трудности и вам понадобится помощь.</p>
 
     [contents]
 
@@ -19,7 +19,7 @@
 
     <h2>Прежде чем мы начнем</h2>
 
-    <p>Прежде чем использовать Verge3D, его нужно где-то отобразить. Сохраните следующий HTML в файл на компьютере вместе с копией Verge3D в директории приложения и откройте его в браузере.</p>
+    <p>Прежде чем использовать Verge3D, его нужно где-то отобразить. Сохраните следующий HTML код в файл на компьютере вместе с копией Verge3D в директории приложения и откройте его в браузере.</p>
 
     <code>
     &lt;!DOCTYPE html&gt;
@@ -41,14 +41,14 @@
     &lt;/html&gt;
     </code>
 
-    <p>Вот и все. Весь приведенный ниже код помещается в пустой тег &lt;скрипта&gt;.</p>
+    <p>Вот и все. Весь приведенный ниже код вам необходимо поместить в пустой тег &lt;script&gt;.</p>
 
 
     [anchor:creating_scene]
 
     <h2>Создание сцены</h2>
 
-    <p>Чтобы иметь возможность отображать что-либо с помощью Verge3D, нам нужны три вещи: сцена, камера и рендерер, чтобы мы могли отрисовать сцену с помощью камеры.</p>
+    <p>Чтобы иметь возможность отображать что-либо с помощью Verge3D, нам нужны три вещи: сцена, камера и рендерер, чтобы мы могли визуализировать сцену с помощью камеры.</p>
 
     <code>
     var scene = new v3d.Scene();
@@ -59,23 +59,23 @@
     document.body.appendChild(renderer.domElement);
     </code>
 
-    <p>Давайте немного объясним, что здесь происходит. Мы настроили сцену, камеру и рендерер.</p>
+    <p>Давайте разберемся, что здесь происходит. Мы настроили сцену, камеру и рендерер.</p>
 
     <p>В Verge3D есть несколько различных камер. На данный момент, давайте используем <strong>PerspectiveCamera</strong>.</p>
 
-    <p>Первым атрибутом является <strong>поле зрения</strong>. FOV - это масштаб сцены, который виден на дисплее в любой момент времени. Значение указывается в градусах.</p>
+    <p>Первым атрибутом является <strong>field of view</strong> (поле зрения). FOV - это масштаб сцены, который виден на дисплее в любой момент времени. Значение указывается в градусах.</p>
 
-    <p>Второй - это <strong>соотношение сторон</strong>. Почти всегда нужно использовать ширину элемента, деленную на высоту, иначе вы получите тот же результат, что и при воспроизведении старых фильмов на широкоэкранном телевизоре - изображение будет выглядеть сжатым.</p>
+    <p>Второй - это <strong>aspect ratio</strong> (соотношение сторон). Почти всегда нужно использовать ширину элемента, деленную на высоту, иначе вы получите тот же результат, что и при воспроизведении старых фильмов на широкоэкранном телевизоре - изображение будет выглядеть сжатым.</p>
 
-    <p>Следующие два атрибута - <strong>near (ближняя)</strong> и <strong>far (дальняя)</strong> плоскость сечения. Это означает, что объекты, расположенные дальше от камеры, чем значение <strong>far</strong> или ближе, чем <strong>near</strong>, не будут отображаться.. Сейчас вам не нужно беспокоиться об этом, но вы можете захотеть использовать другие значения в своих приложениях для достижения лучшей производительности.</p>
+    <p>Следующие два атрибута - <strong>near (ближняя)</strong> и <strong>far (дальняя)</strong> плоскость сечения. Это означает, что объекты, расположенные дальше от камеры, чем значение <strong>far</strong> или ближе, чем <strong>near</strong>, не будут отображаться. Сейчас вам не нужно беспокоиться об этом, но вы можете захотеть использовать другие значения в своих приложениях для достижения лучшей производительности.</p>
 
     <p>Далее следует рендерер. Именно здесь происходит волшебство. В дополнение к WebGLRenderer, который мы используем здесь, Verge3D поставляется с несколькими другими, часто используемыми как запасные варианты для пользователей старых браузеров или для тех, у кого по каким-то причинам нет поддержки WebGL.</p>
 
-    <p>В дополнение к созданию экземпляра рендерера, нам также нужно установить размер, при котором мы хотим, чтобы он рендерил наше приложение. Хорошая идея - использовать ширину и высоту области, которую мы хотим заполнить нашим приложением - в данном случае, ширину и высоту окна браузера. Для приложений, требующих высокой производительности, вы также можете поставить меньшее значение <strong>setSize</strong> , как окно <strong>window.innerWidth/2</strong> и <strong>window.innerHeight/2</strong>, что приведет к рендерингу приложения в половинном размере.</p>
+    <p>В дополнение к созданию источника рендерера, нам также нужно установить размер, в котором мы хотим, чтобы он рендерил наше приложение. Хорошая идея - использовать ширину и высоту области, которую мы хотим заполнить нашим приложением - в данном случае, ширину и высоту окна браузера. Для приложений, требующих высокой производительности, вы также можете поставить меньшее значение <strong>setSize</strong>, как окно <strong>window.innerWidth/2</strong> и <strong>window.innerHeight/2</strong>, что приведет к рендерингу приложения в половинном размере.</p>
 
-    <p>Если вы хотите сохранить размер вашего приложения, но отобразить его в более низком разрешении, вы можете сделать это, вызвав <strong>setSize</strong> с false в качестве <strong>updateStyle</strong> (третий аргумент). Например, <strong>setSize(window.innerWidth/2, window.innerHeight/2, false)</strong> будет рендерить ваше приложение с половинным разрешением, учитывая, что ваш  &lt;канвас&gt; имеет 100% ширину и высоту.</p>
+    <p>Если вы хотите сохранить размер вашего приложения, но отобразить его в более низком разрешении, вы можете сделать это, вызвав <strong>setSize</strong> с false в качестве <strong>updateStyle</strong> (третий аргумент). Например, <strong>setSize(window.innerWidth/2, window.innerHeight/2, false)</strong> будет рендерить ваше приложение с половинным разрешением, учитывая, что ваш  &lt;canvas&gt; имеет 100% ширину и высоту.</p>
 
-    <p>И последнее, но не менее важное, мы добавляем элемент <strong>renderer</strong> в наш HTML-документ. Это элемент &lt;канваса&gt; element который использует рендерер для отображения сцены.</p>
+    <p>И последнее, но не менее важное, мы добавляем элемент <strong>renderer</strong> в наш HTML-документ. Это элемент &lt;canvas&gt;, который использует рендерер для отображения сцены.</p>
 
     <p><em>"Это все хорошо, но где тот куб, который ты обещал?".</em> Давайте добавим его сейчас.</p>
 
@@ -88,20 +88,20 @@
     camera.position.z = 5;
     </code>
 
-    <p>Чтобы создать куб, нам понадобится <strong>BoxGeometry</strong>. Это объект, который содержит все точки (<strong>вершины</strong>) и заполняет (<strong>фейсы</strong>) куба. Мы подробнее изучим этот вопрос в будущем.</p>
+    <p>Чтобы создать куб, нам понадобится <strong>BoxGeometry</strong>. Это объект, который содержит все точки (<strong>вершины</strong>) и заполняет (<strong>фейсы</strong>) куба. Мы изучим этот вопрос подробнее в будущем.</p>
 
-    <p>В дополнение к геометрии нам нужен материал, чтобы раскрасить ее. Verge3D поставляется с несколькими материалами, но сейчас мы остановимся на <strong>MeshBasicMaterial</strong> . Все материалы принимают объект свойств, которые будут к ним применены. Чтобы все было просто, мы предоставляем только атрибут цвета <strong>0x00ff00</strong>, тоесть зелёный. Это работает так же, как цвета в CSS или Photoshop (<strong>hex colors</strong>).</p>
+    <p>Чтобы расскрасить геометрию нам нужен материал. Verge3D поставляется с несколькими материалами, но сейчас мы остановимся на <strong>MeshBasicMaterial</strong>. Все материалы принимают свойства объектов, к которым они применены. Чтобы все было просто, мы предоставляем только атрибут цвета <strong>0x00ff00</strong>, тоесть зелёный. Это работает так же, как цвета в CSS или Photoshop (<strong>hex colors</strong>).</p>
 
-    <p>Третье, что нам нужно, это <strong>Меш</strong>. Меш - это объект, который берет геометрию и применяет к ней материал, который мы затем можем вставить в нашу сцену и свободно перемещать по ней.</p>
+    <p>Третье, что нам нужно, это <strong>Mesh</strong>. Mesh - это объект, который берет геометрию и применяет к ней материал, который мы затем можем вставить в нашу сцену и свободно перемещать по ней.</p>
 
-    <p>По умолчанию, когда мы обращаемся к <strong>scene.add()</strong>, вещь, которую мы добавляем, будет помещена к координатам <strong>(0,0,0)</strong>. Это приведет к тому, что камера и куб окажутся внутри друг друга. Чтобы избежать этого, мы просто немного выдвинем камеру.</p>
+    <p>По умолчанию, когда мы обращаемся к <strong>scene.add()</strong>, все что мы добавляем, будет помещена к координатам <strong>(0,0,0)</strong>. Это приведет к тому, что камера и куб окажутся внутри друг друга. Чтобы избежать этого, мы просто немного выдвинем камеру.</p>
 
 
     [anchor:rendering_scene]
 
     <h2>Рендеринг сцены</h2>
 
-    <p>Если бы вы скопировали код сверху в HTML-файл, который мы создали ранее, вы бы ничего не увидели. Это происходит потому, что мы еще ничего не отрендерили. Для этого нам нужен так называемый цикл  <strong>рендеринга или анимации</strong>.</p>
+    <p>Если бы вы скопировали код сверху в HTML-файл, который мы создали ранее, вы бы ничего не увидели. Это происходит потому, что мы еще ничего не отрендерили. Для этого нам нужен так называемый цикл  <strong>render или animate</strong>.</p>
 
     <code>
     function animate() {
@@ -111,14 +111,14 @@
     animate();
     </code>
 
-    <p>Это создаст цикл, который заставит рендерер рисовать сцену 60 раз в секунду. Если вы новичок в написании игр в браузере, вы можете сказать <em>"почему бы нам просто не создать setInterval ?"</em> Дело в том, что мы могли бы, но <strong>requestAnimationFrame</strong> имеет ряд преимуществ. Perhaps the most important one is that it pauses when the user navigates to another browser tab, Возможно, самым важным из них является то, что он приостанавливается, когда пользователь переходит на другую вкладку браузера, а значит, не тратит драгоценную вычислительную мощность и заряд батареи.</p>
+    <p>Это создаст цикл, который заставит рендерер рисовать сцену 60 раз в секунду. Если вы новичок в написании игр в браузере, вы можете сказать <em>"почему бы нам просто не создать setInterval ?"</em> Дело в том, что мы могли бы, но <strong>requestAnimationFrame</strong> имеет ряд преимуществ. Возможно, самым важным из них является то, что он приостанавливается, когда пользователь переходит на другую вкладку браузера, а значит не тратит драгоценную вычислительную мощность и заряд батареи.</p>
 
 
     [anchor:animating_cube]
 
     <h2>Анимирование куба</h2>
 
-    <p>Если вы вставите весь приведенный выше код в файл, который вы создали перед началом нашей работы, вы должны увидеть зеленую коробку. Давайте сделаем все это немного интереснее, развернув ее.</p>
+    <p>Если вы вставите весь приведенный выше код в файл, который вы создали перед началом нашей работы, вы должны увидеть зеленый куб. Давайте сделаем все это немного интереснее, развернув его.</p>
 
     <p>Добавьте следующее прямо над <strong>renderer.render</strong> call в вашу функцию <strong>animate</strong> :</p>
 
@@ -127,7 +127,7 @@
     cube.rotation.y += 0.1;
     </code>
 
-    <p>Он будет выполняться каждый кадр (60 раз в секунду) и создаст красивую анимацию вращения куба. В принципе, все, что вы хотите переместить или изменить во время работы приложения, должно пройти через цикл анимации. Вы, конечно, можете вызывать оттуда другие функции, чтобы в итоге не получить функцию <strong>animate</strong>  состоящую из сотен строк.
+    <p>Он будет выполняться каждый кадр (60 раз в секунду) и создаст красивую анимацию вращения куба. В принципе, все, что вы хотите переместить или изменить во время работы приложения, должно пройти через цикл анимации. Вы можете вызывать и другие функции, чтобы в итоге не получить функцию <strong>animate</strong> состоящую из сотен строк.
     </p>
 
     [anchor:result]
