--- a/manual/ru/programmers_guide/How-to-update-things.html
+++ b/manual/ru/programmers_guide/How-to-update-things.html
@@ -7,14 +7,14 @@
     <link type="text/css" rel="stylesheet" href="page.css" />
   </head>
   <body><article>
-    <h1>How to Update Things With Code</h1>
+    <h1>Как Обновлять Объекты с Помощью Кода</h1>
     <div>
-      <p>All objects by default automatically update their matrices if they have been added to the scene with</p>
+      <p>Все объекты по умолчанию автоматически обновляют свои матрицы, если они были добавлены на сцену с помощью</p>
       <code>
 var object = new v3d.Object3D();
 scene.add(object);
       </code>
-      or if they are the child of another object that has been added to the scene:
+      или если они являются дочерними объектами другого объекта, который был добавлен в сцену:
       <code>
 var object1 = new v3d.Object3D();
 var object2 = new v3d.Object3D();
@@ -24,38 +24,28 @@ scene.add(object1); //object1 and object2 will automatically update their matric
       </code>
     </div>
 
-    <p>However, if you know object will be static, you can disable this and update the transform matrix manually just when needed.</p>
+    <p>Однако, если вы знаете, что объект будет статичным, вы можете отключить эту функцию и обновлять матрицу преобразования вручную только тогда, когда это необходимо.</p>
 
     <code>
 object.matrixAutoUpdate  = false;
 object.updateMatrix();
     </code>
 
-    <h2>Geometries</h2>
+    <h2>Геометрические параметры</h2>
     <div>
       <h3>[page:BufferGeometry]</h3>
       <div>
         <p>
-          BufferGeometries store information (such as vertex positions, face indices, normals, colors,
-          UVs, and any custom attributes) in [page:BufferAttribute buffers] - that is,
-          [link:https://developer.mozilla.org/en-US/docs/Web/JavaScript/Typed_arrays typed arrays].
-          This makes them generally faster than standard Geometries, at the cost of being somewhat harder to
-          work with.
+          BufferGeometries хранят информацию (такую как позиции вершин, индексы граней, нормали, цвета, UV развертки и любые пользовательские атрибуты) в [page:BufferAttribute buffers] - то есть, [link:https://developer.mozilla.org/en-US/docs/Web/JavaScript/Typed_arrays typed arrays]. Это делает их в целом быстрее стандартной Геометрии, ценой того, что с ними несколько сложнее работать.
         </p>
         <p>
-          With regards to updating BufferGeometries, the most important thing to understand is that
-          you cannot resize buffers (this is very costly,  basically the equivalent to creating a new geometry).
-          You can however update the content of buffers.
+          Что касается обновления BufferGeometries, самое важное, что нужно понять, это то, что вы не можете изменять размер буферов (это очень затратно, и эквивалентно созданию новой геометрии). Однако вы можете обновить содержимое буферов.
         </p>
         <p>
-          This means that if you know an attribute of your BufferGeometry will grow, say the number of vertices,
-          you must pre-allocate a buffer large enough to hold any new vertices that may be created. Of
-          course, this also means that there will be a maximum size for your BufferGeometry - there is
-          no way to create a BufferGeometry that can efficiently be extended indefinitely.
+          Это означает, что если вы знаете, что атрибут вашего BufferGeometry будет расти, например, количество вершин, вы должны предварительно выделить достаточно большой буфер, чтобы вместить все новые вершины, которые могут быть созданы. Конечно, это также означает, что существует максимальный размер вашего BufferGeometry - не существует способа создать BufferGeometry, который может эффективно расширяться бесконечно.
         </p>
         <p>
-          We'll use the example of a line that gets extended at render time. We'll allocate space
-          in the buffer for 500 vertices but draw only two at first, using [page:BufferGeometry.drawRange].
+          Мы будем использовать пример линии, которая удлиняется во время рендеринга. Мы выделим место в буфере для 500 вершин, но сначала нарисуем только две, используя [page:BufferGeometry.drawRange].
         </p>
         <code>
 var MAX_POINTS = 500;
@@ -79,7 +69,7 @@ var line = new v3d.Line(geometry,  material);
 scene.add(line);
         </code>
          <p>
-          Next we'll randomly add points to the line using a pattern like:
+          Далее мы произвольно добавим точки к линии, используя паттерн, например:
         </p>
         <code>
 var positions = line.geometry.attributes.position.array;
@@ -100,32 +90,31 @@ for (var i = 0, l = MAX_POINTS; i < l; i++) {
 }
         </code>
         <p>
-          If you want to change the <em>number of points</em> rendered after the first render, do this:
+          Если вы хотите изменить <em>количество точек</em> отображаемых после первого рендеринга, сделайте следующее:
         </p>
         <code>
 line.geometry.setDrawRange(0, newValue);
         </code>
         <p>
-          If you want to change the position data values after the first render, you need to
-          set the needsUpdate flag like so:
+          Если вы хотите изменить значения данных о позиции после первого рендеринга, вам необходимо
+          установить параметр needsUpdate следующим образом:
         </p>
         <code>
 line.geometry.attributes.position.needsUpdate = true; // required after the first render
         </code>
 
         <p>
-          If you change the position data values after the initial render, you may need to
-          call `.computeBoundingSphere()` in order to recalculate the geometry's bounding sphere.
+          Если вы измените значения данных о положении после первоначального рендеринга, вам может потребоваться вызвать `.computeBoundingSphere()`, чтобы заново рассчитать геометрическую сферу.
         </p>
         <code>
 line.geometry.computeBoundingSphere();
         </code>
 
         <p>
-          [link:http://jsfiddle.net/w67tzfhx/ Here is a fiddle] showing an animated line which you can adapt to your use case.
+          [link:http://jsfiddle.net/w67tzfhx/ Здесь показана анимированная строка, которую вы можете адаптировать к своему кейсу.
         </p>
 
-        <h3>Examples:</h3>
+        <h3>Примеры:</h3>
           [example:webgl_custom_attributes WebGL / custom / attributes]<br />
           [example:webgl_buffergeometry_custom_attributes_particles WebGL / buffergeometry / custom / attributes / particles]
 
@@ -135,11 +124,7 @@ line.geometry.computeBoundingSphere();
       <h3>[page:Geometry]</h3>
       <div>
         <p>
-          The following flags control updating of various geometry attributes. Set flags only
-          for attributes that you need to update, updates are costly. Once buffers
-          change, these flags reset automatically back to false. You need to keep setting them to
-          true if you want to keep updating buffers. Note that this applies only to [page:Geometry]
-          and not to [page:BufferGeometry].
+          Следующие флаги управляют обновлением различных атрибутов геометрии. Флаги устанавливаются только при изменении буферов, эти флаги автоматически сбрасываются обратно в false. Вам нужно постоянно устанавливать их в true, если вы хотите продолжать обновлять буферы. Обратите внимание, что это относится только к [page:Geometry], но не к [page:BufferGeometry].
         </p>
         <code>
 var geometry = new v3d.Geometry();
@@ -153,8 +138,7 @@ geometry.tangentsNeedUpdate = true;
         </code>
 
         <p>
-          In versions prior to [link:https://github.com/mrdoob/three.js/releases/tag/r66 r66] meshes
-          additionally need the <em>dynamic</em> flag enabled (to keep internal typed arrays):
+          В версиях, предшествующих [link:https://github.com/mrdoob/three.js/releases/tag/r66 r66] для мешей требуется включенный флажок <em>dynamic</em> (для хранения внутренних типовых массивов):
         </p>
 
         <code>
@@ -162,7 +146,7 @@ geometry.tangentsNeedUpdate = true;
     geometry.dynamic = true;
         </code>
 
-        <h3>Examples:</h3>
+        <h3>Примеры:</h3>
           [example:webgl_geometry_dynamic WebGL / geometry / dynamic]<br />
       </div>
 
@@ -171,15 +155,15 @@ geometry.tangentsNeedUpdate = true;
 
 
 
-    <h2>Materials</h2>
+    <h2>Материалы</h2>
     <div>
-      <p>All uniforms values can be changed freely (e.g. colors, textures, opacity, etc), values are sent to the shader every frame.</p>
+      <p>Все универсальные значения можно свободно менять (например, цвета, текстуры, непрозрачность и т.д.), значения отправляются в шейдер каждый кадр.</p>
 
-      <p>Also GLstate related parameters can change any time (depthTest, blending, polygonOffset, etc).</p>
+      <p>Также параметры, связанные с GLstate, могут изменяться в любое время (depthTest, blending, polygonOffset и т.д.).</p>
 
-      <p>Flat / smooth shading is baked into normals. You need to reset normals buffer (see above).</p>
+      <p>Плоское/гладкое затенение запекается в нормали. Необходимо сбросить буфер нормалей (см. выше).</p>
 
-      <p>The following properties can't be easily changed at runtime (once the material is rendered at least once):</p>
+      <p>Следующие свойства не могут быть легко изменены во время выполнения (после того, как материал будет отрисован хотя бы один раз):</p>
       <ul>
         <li>numbers and types of uniforms</li>
         <li>numbers and types of lights</li>
@@ -196,44 +180,44 @@ geometry.tangentsNeedUpdate = true;
         </li>
       </ul>
 
-      <p>Changes in these require building of new shader program. You'll need to set</p>
+      <p>Их изменение требует создания новой шейдерной программы. Вам нужно будет установить</p>
       <code>material.needsUpdate = true</code>
 
-      <p>Bear in mind this might be quite slow and induce jerkiness in framerate (especially on Windows, as shader compilation is slower in DirectX than OpenGL).</p>
+      <p>Имейте в виду, что это может быть довольно медленно и вызвать рывки в частоте кадров (особенно на Windows, поскольку компиляция шейдеров в DirectX происходит медленнее, чем в OpenGL).</p>
 
-      <p>For smoother experience you can emulate changes in these features to some degree by having "dummy" values like zero intensity lights, white textures, or zero density fog.</p>
+      <p>Для более плавного восприятия вы можете в некоторой степени эмулировать изменения этих характеристик, используя "фиктивные" значения, такие как освещение нулевой интенсивности, белые текстуры или туман нулевой плотности.</p>
 
-      <p>You can freely change the material used for geometry chunks, however you cannot change how an object is divided into chunks (according to face materials). </p>
+      <p>Вы можете свободно изменять материал, используемый для геометрических фрагментов, однако вы не можете изменить способ разделения объекта на фрагменты (в соответствии с материалами фейсов). </p>
 
-      <h3>If you need to have different configurations of materials during runtime:</h3>
-      <p>If the number of materials / chunks is small, you could pre-divide the object beforehand (e.g. hair / face / body / upper clothes / trousers for a human, front / sides / top / glass / tire / interior for a car). </p>
+      <h3>Если вам необходимо иметь различные конфигурации материалов во время работы:</h3>
+      <p>Если количество материалов / фрагментов невелико, можно предварительно разделить объект (например, волосы / лицо / тело / верхняя одежда / брюки для человека, перед / бока / верх / стекло / шины / салон для автомобиля). </p>
 
-      <p>If the number is large (e.g. each face could be potentially different), consider a different solution, such as using attributes / textures to drive different per-face look.</p>
+      <p>Если их количество велико (например, каждое лицо может быть потенциально разным), рассмотрите другое решение, например, использование атрибутов/текстур для управления различным внешним видом каждого лица.</p>
 
-      <h3>Examples:</h3>
+      <h3>Примеры:</h3>
       [example:webgl_materials_cars WebGL / materials / cars]<br />
       [example:webgl_postprocessing_dof WebGL / webgl_postprocessing / dof]
     </div>
 
 
-    <h2>Textures</h2>
+    <h2>Текстуры</h2>
     <div>
-      <p>Image, canvas, video and data textures need to have the following flag set if they are changed:</p>
+      <p>Текстуры изображений, canvas, видео и данных должны иметь следующий параметр, если они изменяются:</p>
       <code>
         texture.needsUpdate = true;
       </code>
-      <p>Render targets update automatically.</p>
+      <p>Render targets обновляются автоматически.</p>
 
-      <h3>Examples:</h3>
+      <h3>Примеры:</h3>
       [example:webgl_materials_video WebGL / materials / video]<br />
       [example:webgl_rtt WebGL / rtt]
 
     </div>
 
 
-    <h2>Cameras</h2>
+    <h2>Камеры</h2>
     <div>
-      <p>A camera's position and target is updated automatically. If you need to change</p>
+      <p>Положение и цель камеры обновляются автоматически. Если вам необходимо изменить</p>
       <ul>
         <li>
           fov
@@ -249,7 +233,7 @@ geometry.tangentsNeedUpdate = true;
         </li>
       </ul>
       <p>
-        then you'll need to recompute the projection matrix:
+        то вам нужно будет заново вычислить матрицу проекции:
       </p>
       <code>
 camera.aspect = window.innerWidth / window.innerHeight;
